--- a/renderer/main.html
+++ b/renderer/main.html
@@ -138,12 +138,13 @@
 			</div>
 			<div class="col-2 p-0"><!-- buttons -->
 				<div id="moveButtons" class="p-2" style="position: absolute; top: 120px;">
-					<button onclick="clientBatchOperation('move')" type="button" style="height: 11vh; line-height: 1.1em" class="w-100 mb-2 btn btn-success rounded-4 disabled"><gg-icon class="gg-move-task"></gg-icon><br /><l10n class="small" name="move_to_list"></l10n></button>
-					<button onclick="clientBatchOperation('copy')" type="button" style="height: 11vh; line-height: 1.1em" class="w-100 mb-2 btn btn-success rounded-4 disabled"><gg-icon class="gg-copy"></gg-icon><br /><l10n class="small" name="copy_to_list"></l10n></button>
-					<button onclick="clientBatchOperation('delete')" type="button" style="height: 11vh; line-height: 1.1em" class="w-100 mb-2 btn btn-danger rounded-4 disabled"><gg-icon class="gg-file-remove"></gg-icon><br /><l10n class="small" name="remove_from_list"></l10n></button>
-					<button onclick="clientBatchOperation('open')" type="button" style="height: 11vh; line-height: 1.1em" class="w-100 mb-2 btn btn-secondary rounded-4 disabled"><gg-icon class="gg-file-document"></gg-icon><br /><l10n class="small" name="open_from_list"></l10n></button>
-					<button onclick="clientBatchOperation('hub')" type="button" style="height: 11vh; line-height: 1.1em" class="w-100 mb-2 btn btn-secondary rounded-4 disabled"><gg-icon class="gg-file-document"></gg-icon><br /><l10n class="small" name="open_hub"></l10n></button>
-					<button onclick="mods.copyFavorites()" type="button" style="height: 11vh; line-height: 1.1em" class="w-100 mb-2 btn btn-warning rounded-4"><gg-icon class="gg-chevron-double-down-r"></gg-icon><br /><l10n class="small" name="copy_fav_to"></l10n></button>
+					<button onclick="clientBatchOperation('move')" type="button" style="height: 9.5vh; line-height: 1.1em" class="w-100 mb-2 btn btn-success rounded-4 disabled"><gg-icon class="gg-move-task"></gg-icon><br /><l10n class="small" name="move_to_list"></l10n></button>
+					<button onclick="clientBatchOperation('copy')" type="button" style="height: 9.5vh; line-height: 1.1em" class="w-100 mb-2 btn btn-success rounded-4 disabled"><gg-icon class="gg-copy"></gg-icon><br /><l10n class="small" name="copy_to_list"></l10n></button>
+					<button onclick="clientBatchOperation('link')" type="button" style="height: 9.5vh; line-height: 1.1em" class="w-100 mb-2 btn btn-primary rounded-4 disabled"><gg-icon class="gg-link"></gg-icon><br /><l10n class="small" name="link_to_list"></l10n></button>
+					<button onclick="clientBatchOperation('delete')" type="button" style="height: 9.5vh; line-height: 1.1em" class="w-100 mb-2 btn btn-danger rounded-4 disabled"><gg-icon class="gg-file-remove"></gg-icon><br /><l10n class="small" name="remove_from_list"></l10n></button>
+					<button onclick="clientBatchOperation('open')" type="button" style="height: 9.5vh; line-height: 1.1em" class="w-100 mb-2 btn btn-secondary rounded-4 disabled"><gg-icon class="gg-file-document"></gg-icon><br /><l10n class="small" name="open_from_list"></l10n></button>
+					<button onclick="clientBatchOperation('hub')" type="button" style="height: 9.5vh; line-height: 1.1em" class="w-100 mb-2 btn btn-secondary rounded-4 disabled"><gg-icon class="gg-file-document"></gg-icon><br /><l10n class="small" name="open_hub"></l10n></button>
+					<button onclick="mods.copyFavorites()" type="button" style="height: 9.5vh; line-height: 1.1em" class="w-100 mb-2 btn btn-warning rounded-4"><gg-icon class="gg-chevron-double-down-r"></gg-icon><br /><l10n class="small" name="copy_fav_to"></l10n></button>
 				</div>
 			</div><!-- end: buttons-->
 		</div>
